--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -26,7 +26,7 @@ jobs:
     env:
       GIT: "https://github.com"
       CMAKE_VER: "3.18.4"
-      REPO_NAME: "2048-rpg"
+      REPO_NAME: "mercenary-battles"
       LIB_PATH: "/var/temp"
       MANUAL_CACHING: "6"
       AUTO_CACHING: "1"
@@ -48,16 +48,6 @@ jobs:
           libpng-dev libcurl4-gnutls-dev libfontconfig1-dev libsqlite3-dev libglew-dev \
           libssl-dev libgtk-3-dev libglfw3 libglfw3-dev xorg-dev cmake
 
-      - name: Setup vars
-        shell: bash
-        run: |
-          if test -z "{{ EVENT_PAYLOAD.pull_request.html_url }}"
-          then
-            echo "BUILD_PULL_REQUEST_TEXT=''" >> $GITHUB_ENV
-          else
-            echo "BUILD_PULL_REQUEST_TEXT='Pull request - {{ EVENT_PAYLOAD.pull_request.html_url }}'" >> $GITHUB_ENV
-          fi
-
       - name: Build. 🔨
         shell: bash
         run: |
@@ -66,5 +56,4 @@ jobs:
           cd build
           cmake ../
           make -j 4
-          echo "BUILD_SUCCESS=true" >> $GITHUB_ENV
 #          make test todo
