--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -43,7 +43,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y --fix-missing \
-          build-essential clang git wget autoconf python2 python2-pip g++ libgdk-pixbuf2.0-dev \
+          build-essential clang git wget autoconf python2 g++ libgdk-pixbuf2.0-dev \
           libx11-dev libxmu-dev libglu1-mesa-dev libgl2ps-dev libxi-dev libzip-dev \
           libpng-dev libcurl4-gnutls-dev libfontconfig1-dev libsqlite3-dev libglew-dev \
           libssl-dev libgtk-3-dev libglfw3 libglfw3-dev xorg-dev cmake
@@ -51,9 +51,14 @@ jobs:
       - name: Build. 🔨
         shell: bash
         run: |
+          git clone https://github.com/gloomyzen/engine-x.git
+          cd engine-x
+          export ADXE_ROOT=$PWD
+          echo -e "y" | bash install-deps-linux.sh
+          cd ../
           rm -rf build
           mkdir build
           cd build
           cmake ../
           make -j 4
-#          make test todo
+#          make test
